===================================
Anderson Lite Changelog
===================================

Version 1.0.8
-----------------------------------
[added] check if current user can edit theme options before displaying admin notices on frontend
[fixed] linked widget titles in Category Post Widgets with "All Categories" selected

Version 1.0.7
-----------------------------------
[added] extra content-search.php template for search
[changed] appearance of static pages on search template
[removed] unnecessary code in sidebar.php
[fixed] ampersand escape bug in pagination links (https://core.trac.wordpress.org/ticket/30831)

Version 1.0.6
-----------------------------------
[changed] design of main navigation
[changed] styling of widgets
[updated] to Genericon Font 3.3 and added new twitch and spotify icons

Version 1.0.5
-----------------------------------
[added] unminified version of html5shiv.min.js and jquery.flexslider-min.js

Version 1.0.4
-----------------------------------
[added] magazine homepage page template
[added] 4 Category Posts Widgets for Magazine Homepage
[added] setting to display post slider on magazine homepage template

Version 1.0.3
-----------------------------------
[updated] theme language .pot file
[removed] featured-image-header tag

Version 1.0.2
-----------------------------------
[added] styling for sticky posts
[updated] tags in style.css to match theme features
[fixed] missing translations

Version 1.0.1
-----------------------------------
Magazine version of this theme

Version 1.0
-----------------------------------
Final Version