@@ -5,6 +5,8 @@ Anderson Lite Changelog
 Version 1.0.8
 -----------------------------------
 [added] check if current user can edit theme options before displaying admin notices on frontend
+[added] action hooks for footer text and site title
+[moved] credit link function to /inc/template-tags.php
 [fixed] linked widget titles in Category Post Widgets with "All Categories" selected
 
 Version 1.0.7
